--- a/src/ext_syntaxe.tex
+++ b/src/ext_syntaxe.tex
@@ -218,11 +218,11 @@ endswitch
 
 
 \subsection{\xlang{Boucles et macros}{Loops and Macros}}
-\include{loops}
-\include{macros}
+\input{loops}
+\input{macros}
 
 \subsection{\xlang{Labels et modules}{Labels and modules}}
-\include{labels}  
+\input{labels}
 
 \subsection{\xlang{Structures de données}{Structures}}
 
