--- a/src/ext_syntaxe.tex
+++ b/src/ext_syntaxe.tex
@@ -225,96 +225,7 @@ endswitch
 \input{labels}
 
 \subsection{\xlang{Structures de données}{Structures}}
-
-\subsubsection{STRUCT} \index{STRUCT} \index{ENDSTRUCT}
-\begin{verbatim}
-STRUCT <prototype name> [,<variable name>]
-...
-ENDSTRUCT
-\end{verbatim}
-
-\begin{xen}
-As Z80 processor is able to manage structured data thanks to its IX and IY registers, RASM introduces STRUCT directive, wich is used for defining a structure, in a similar way to C syntax
-\end{xen}
-
-\begin{code}
-; structure st1 created with two fields ch1 and ch2.
-struct st1
- ch1 defw 0
- ch2 defb 0
-endstruct
-
-; Nested structures:
-; metast1 is created with 2 sub-structures st1 called pr1 et pr2
-struct metast1
- struct st1 pr1
- struct st1 pr2
-endstruct
-\end{code}
-
-\begin{xfr}
-Quand \texttt{\{STRUCT\}} est utilisé avec 2 paramètres, RASM va créer une structure en mémoire, basée sur le prototype.
-Dans l'exemple ci dessous, une structure de type 'metast1' sera instanciée,avec pour nom 'mymeta':
-\end{xfr}
-
-\begin{xen}
-When \texttt{\{STRUCT\}} directive is used with 2 parameters, RASM will create a structure in memory, based on the prototype.
-In the example below, it will instantiate a metast1 structure type, called mymeta.
-\end{xen}
-
-\begin{code}
-struct metast1 mymeta
-\end{code}
-
-\begin{xfr}
-Exemple de récuperation de l'adresse absolue d'un membre en utilisant le nom d'une structure déclarée:
-\end{xfr}
-
-\begin{xen}
-Example of retrieving fields absolute address using the structure previously declared:
-\end{xen}
-
-\begin{code}
-LD HL,mymeta.pr2.ch1
-LD A,(HL)
-\end{code}
-
-\begin{xfr}
-Exemple d'accès d'un membre avec un offset, en utilisant le nom du prototype:
-\end{xfr}
-\begin{xen}
-Example of accessing a field with an offset, by using the prototype name:
-\end{xen}
-
-\begin{code}
-LD A,(IX+metast1.pr2.ch1)
-\end{code}
-
-
-\subsubsection{SIZEOF}\index{SIZEOF}
-
-\begin{xfr}
-  Le préfixe \texttt{\{SIZEOF\}} devant un nom de structure, de sous-structure ou meme devant le champ d'une structure, permet de récupérer sa taille.
-%Il est recommandé, pour recuperer la taille d'une structure, d'utiliser le prefixe \{SIZEOF\}.
-\end{xfr}
-
-\begin{xen}
-%Using \texttt{\{SIZEOF\}} prefix before a structure name get the size of it.
-Recommended usage to get the size of a structure is to use \{SIZEOF\} prefix.
-It alsoworks for a substructure or a field.
-\end{xen}
-
-\begin{code}
-  LD A,\{SIZEOF\}metast1              ; LD A, 6
-  LD A,\{SIZEOF\}metast1.pr2          ; LD A, 3
-  LD A,\{SIZEOF\}metast1.pr2.ch1      ; LD A, 2
-\end{code}
-
-
-\begin{xen}
-Like Vasm, you also can get the structure size using its prototype name but it is not recommended.
-\end{xen}
-
+\input{struct}
 
 \subsection{\xlang{Durée d'un bloc}{Duration of a bloc}}
 
