--- a/src/zx.tex
+++ b/src/zx.tex
@@ -8,6 +8,21 @@ RASM intègre aussi quelques options et directives qui ne concernent que l'archi
 RASM also features a few options and directives for ZX architecture.
 \end{xen}
 
+
+\subsection{\xlang{Directive HOBETA}{HOBETA Directive}}\index{HOBETA}\label{HOBETA}
+
+\begin{verbatim}
+HOBETA
+\end{verbatim}
+
+\begin{xfr}
+Cette directive sert a génerer un fichier au format HOBETA, en ajoutant l'entete adaptée
+\end{xfr}
+
+\begin{xen}
+Use this directive for generating a file in HOBETA format
+\end{xen}
+
 \subsection{\xlang{Selection des Banques}{Bank Selection}}
 
 \subsubsection{\xlang{Directive BUILDZX}{BUILDZX Directive}}\index{BANK}\label{ZXBANK}
