--- a/src/compilation.tex
+++ b/src/compilation.tex
@@ -2,7 +2,7 @@
 
 \begin{xfr}
 %RASM ne nécessite aucune installation, il se résume à un unique fichier binaire éxécutable.
-Cette section décrit la procédure pour compiler RASM sur différentes plateformes, le code source C étant disponible. De plus, il est possible d'integrer RASM dans vos propres applications, ce qui sera vu a la prochaine suivante. 
+Cette section décrit la procédure pour compiler RASM sur différentes plateformes, le code source C étant disponible. De plus, il est possible d'integrer RASM dans vos propres applications, ce qui sera vu a la prochaine suivante.
 \end{xfr}
 
 \subsection{\xlang{Compiler RASM}{Building RASM}}
@@ -32,8 +32,10 @@ cl.exe rasm_vXXX.c -O2 -Ob3
 \subsubsection{Dos/Windows 32 (Watcom)}
 
 \begin{verbatim}
-wcl386.exe rasm_vXXX.c -6r -6s -fp6 -d0 -k4000000 -ox
+wcl386 rasm_vXXX.c -6r -6s -fp6 -d0 -k4000000 -ox /bt=DOS /l=dos4g -DOS_WIN=1 -DNOAPLIB=1
 \end{verbatim}
+
+\xlang{La compression AP6Utra n'est pas supporté pour cette architecture.}{AP-Ultra cruncher is not supported on this version. }
 
 \subsubsection{MacOS}
 
@@ -44,9 +46,10 @@ cc rasm_vXXX.c -O2 -lm -march=native
 \subsubsection{MorphOS}
 
 \begin{verbatim}
-ppc-morphos-gcc-5 -O2 -c -o rasm rasm_vXXX.c
+gcc -noixemul -O2 -c -o rasm rasm_vXXX.c
 strip rasm
 \end{verbatim}
+%ppc-morphos-gcc-5 -O2 -c -o rasm rasm_vXXX.c
 
 
 \subsection{\xlang{Integrer RASM}{Embedding RASM}}
@@ -71,8 +74,8 @@ There are 3 steps t follow for integrating  RASM into your own C/C++ application
 \item Building our application, without forgetting to link the binary file produced in step 1.
 \end{itemize}
 
-As a first example, we'll use \texttt{RasmAssemble} function, which returns an error code (0 if everything went fine, or -1 if an error happened), and also assembled byte code, in an array of unsigned chars.  
-\texttt{RasmAssembleInfos} is similar, but it also returns additional data, such as a list of errors and the value of all symbols. 
+As a first example, we'll use \texttt{RasmAssemble} function, which returns an error code (0 if everything went fine, or -1 if an error happened), and also assembled byte code, in an array of unsigned chars.
+\texttt{RasmAssembleInfos} is similar, but it also returns additional data, such as a list of errors and the value of all symbols.
 \end{xen}
 
 
@@ -90,11 +93,11 @@ lp: djnz lp \n\
 
 int main(void) {
   printf("%s\n", prog);
-    
-  unsigned char *buf = NULL; 
+
+  unsigned char *buf = NULL;
   int asmsize = 0;
-  int res = RasmAssemble(prog, strlen(prog), &buf, &asmsize);    
-  
+  int res = RasmAssemble(prog, strlen(prog), &buf, &asmsize);
+
   printf("Result=%d, Generated code size=%d\n",res,asmsize);
 
   if (res==0)
@@ -114,7 +117,7 @@ int main(void) {
   if (buf)
     free(buf);
 
-  return 0;    
+  return 0;
 }
 \end{verbatim}
 
@@ -128,14 +131,14 @@ gcc embed.cpp rasm\_embedded.obj -lm
 \xlang{Le résultat de l'éxecution est le suivant:}{When executed, it produces this:}
 
 \begin{code}
-\$ ./a.out 
-org \#9000 
-    ld b,10 
-lp: djnz lp 
-    ret 
+\$ ./a.out
+org \#9000
+    ld b,10
+lp: djnz lp
+    ret
 
 Result=0, Generated code size=5
-06 0A 10 FE C9 
+06 0A 10 FE C9
 \end{code}
 
 \subsubsection{\xlang{Récupération des erreurs et symboles}{Errors and Symbols}}
