--- a/src/usage.tex
+++ b/src/usage.tex
@@ -283,6 +283,7 @@ Ces options sont moins courantes ,mais peuvent parfois etre utiles pour le débu
 \item -d : produit des informations lors du pré-processing
 \item -a : produit des informations lors de l'assemblage
 \item -n : affiche les licences tierces
+\item -xpr : pour l'export de fichiers cartouche étendues, permet d'exporter des fichiers supplémentaires par bloc de 512KO (\ref{XPR})
 \end{itemize}
 
 \end{xfr}
@@ -297,6 +298,7 @@ These options are useful in rare occasions, it can sometime help for tracking bu
 \item -d : verbose detailed pre-processing
 \item -a : verbose detailed assembling
 \item -n : display third parties licences
+\item -xpr : for extended cartdidge export, generate additional files for every 512KB slot (\ref{XPR})
 \end{itemize}
 
 \end{xen}
