fix missing \ in example

--- a/src/crunched.tex
+++ b/src/crunched.tex
@@ -164,7 +164,7 @@ It is possible to specify a preamp factor, and also additional options:
 \begin{code}
 ORG \#4000
 INCBIN 'sound.wav',SMP
-INCBIN 'sound.wav',DMA,1,DMA_CHANNEL_A,DMA_INT,DMA_REPEAT,4
+INCBIN 'sound.wav',DMA,1,DMA\_CHANNEL\_A,DMA\_INT,DMA\_REPEAT,4
 \end{code}
 
 \subsection{\xlang{Compression}{Crunching}}
